# sfml_mario_test

./: .gitignore  .gitmodules  CMakeLists.txt
assets/animations/: anim_player.json  anim_questionblock.json
assets/animations/tiles/: questionblock.json
assets/levels/: 1-1.json
assets/models/tiles/: brick.json  ground.json  questionblock.json
assets/tiles/: brick.json  ground.json  questionblock.json
dependencies/: CMakeLists.txt
docs/: animation  areatype  collision manager  dev  game manager  input  levelmanager loader  levels  objects  texture manager v2  themes  tile  tile collisions.txt  tile types.txt
docs/MANAGER REWRITE/: ANIMATIONS  MODELS
docs/editor/: editor v1.kra
src/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  AnimationSubManager.cpp  AnimationSubManager.h  CMakeLists.txt  CollisionSide.cpp  GameManager.cpp  GameManager.h  Globals.cpp  Globals.h  InputManager.h  LevelManager.cpp  LevelManager.h  ManagerUtilities.cpp  ManagerUtilities.h  Player.cpp  Player.h  TextureManager.cpp  TextureManager.h  Tile.cpp  Tile.h  TileManager.cpp  TileManager.h  constants.h  main.cpp
src/Managers/: AnimationManager.cpp  AnimationManager.h  AnimationSubManager.cpp  AnimationSubManager.h  EditorManager.cpp  EditorManager.h  FontManager.cpp  FontManager.h  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  LevelManager.cpp  LevelManager.h  ManagerUtilities.cpp  ManagerUtilities.h  ModelManager.cpp  ModelManager.h  SoundManager.cpp  SoundManager.h  TextureManager.cpp  TextureManager.h  TileManager.cpp  TileManager.h
src/Types/: Animation.cpp  Animation.h  AnimationSet.cpp  AnimationSet.h  CollisionSide.cpp  CollisionSide.h  Frame.h  Level.h  Model.cpp  Model.h  Texture.h  Tile.cpp  Tile.h
